cabal-version:      2.4
name:               banyan
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

data-dir:           default 
data-files:
  banyan.svg

executable banyan
  build-depends:
    , aeson
    , algebraic-graphs
    , async
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , constraints-extras
    , containers
    , data-default
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , directory
    , ema                     >=0.3.0.1
    , which
    , emanote
    , filepath
    , filepattern
    , hedgehog
    , ixset-typed
    , lens
    , lvar
    , megaparsec
    , modern-uri
    , monad-logger
    , mwc-random
    , NanoID
    , neat-interpolation
    , pandoc-types
    , pandoc
    , process
    , parser-combinators
    , pureMD5
    , random
    , relude
    , safe-exceptions
    , shower
    , some
    , tagged
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text
    , time
    , unliftio
    , uuid

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  other-modules:
    Banyan.Graph
    Banyan.ID
    Banyan.Markdown
    Banyan.Model
    Banyan.Model.Hash
    Banyan.Model.Patch
    Banyan.Route
    Banyan.View
    Banyan.View.Common
    Banyan.View.Sidebar
    Banyan.VSCode
    Paths_banyan

  autogen-modules:    Paths_banyan
